# ParsBench

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
changelog/: index.html
code_reference/benchmarks/: index.html
code_reference/models/: index.html
code_reference/scores/: index.html
code_reference/tasks/: index.html
contribution/: index.html
docs/: changelog.md  contribution.md  donation.md  getting-started.md  index.md
docs/code_reference/: benchmarks.md  models.md  scores.md  tasks.md
docs/tutorial/: advance.md  advanced.md  benchmarks.md  models.md  tasks.md
donation/: index.html
getting-started/: index.html
parsbench/benchmarks/: __init__.py  base.py  benchmark_result.py  custom_benchmark.py  parsinlu_benchmark.py
parsbench/models/: __init__.py  anthropic_interface.py  base.py  openai_interface.py  transformers_interface.py
parsbench/scores/: __init__.py  base.py  common.py  machine_translation.py  summarization.py
parsbench/tasks/: __init__.py  utils.py
parsbench/tasks/base/: __init__.py  data_loader.py  evaluation_result.py  helpers.py  prompt_template.py  task.py  task_category.py  task_match.py
parsbench/tasks/classification/: __init__.py  parsinlu_sentiment.py
parsbench/tasks/classification/prompts/: en_parsinlu_sentiment.txt  en_parsinlu_sentiment_shot.txt  fa_parsinlu_sentiment.txt  fa_parsinlu_sentiment_shot.txt
parsbench/tasks/entailment/: __init__.py  conjnli.py  farstail.py  parsinlu.py
parsbench/tasks/entailment/prompts/: en_conjnli_entailment.txt  en_conjnli_entailment_shot.txt  en_parsinlu_entailment.txt  en_parsinlu_entailment_shot.txt  fa_conjnli_entailment.txt  fa_conjnli_entailment_shot.txt  fa_parsinlu_entailment.txt  fa_parsinlu_entailment_shot.txt
parsbench/tasks/machine_translation/: __init__.py  parsinlu_en_fa.py  parsinlu_fa_en.py
parsbench/tasks/math/: __init__.py  persian_math.py
parsbench/tasks/math/prompts/: en_math.txt  en_math_1_shot.txt  (+4 more)
parsbench/tasks/multiple_choice/: __init__.py  parsinlu.py  persian_mmlu.py
parsbench/tasks/ner/: __init__.py  persian_ner.py
parsbench/tasks/reading_comprehension/: __init__.py  parsinlu.py
parsbench/tasks/summarization/: __init__.py  pnsummary.py  xlsum.py
search/: search_index.json
tutorial/advance/: index.html
tutorial/advanced/: index.html
tutorial/benchmarks/: index.html
tutorial/models/: index.html
tutorial/scores/: index.html
tutorial/tasks/: index.html
(+19 files in other folders)
