[tool.poetry]
name = "parsbench"
version = "0.1.0"
description = "ParsBench provides toolkits for benchmarking LLMs based on the Persian language tasks."
authors = ["Shahriar Shariati <shahriarshm81@gmail.com>"]
readme = "README.md"
packages = [{include = "parsbench"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
transformers = "^4.41.2"
openai = "^1.34.0"
jsonlines = "^4.0.0"
scikit-learn = "^1.5.0"
hazm = "^0.10.0"
scipy = "1.10.1"
datasets = "^2.20.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
jupyter = "^1.0.0"
mypy = "^1.10.0"
mkdocs-material = "^9.5.27"
mkdocstrings = {version = "^0.25.1", extras = ["python"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
