[tool.poetry]
name = "parsbench"
version = "0.1.7"
description = "ParsBench provides toolkits for benchmarking LLMs based on the Persian language tasks."
authors = ["Shahriar Shariati <shahriarshm81@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://parsbench.github.io/ParsBench"
repository = "https://github.com/ParsBench/ParsBench"
documentation = "https://parsbench.github.io/ParsBench"
keywords = ["llm", "benchmarking", "persian"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Benchmark",
    "Natural Language :: Persian",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only"
]
packages = [{include = "parsbench"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
transformers = "^4.42.3"
openai = "^1.35.10"
jsonlines = "^4.0.0"
scikit-learn = "^1.5.1"
hazm = "^0.10.0"
scipy = "1.10.1"
datasets = "^2.20.0"
anthropic = "^0.30.1"
rouge-score = "^0.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
jupyter = "^1.0.0"
mypy = "^1.10.0"
mkdocs-material = "^9.5.27"
mkdocstrings = {version = "^0.25.1", extras = ["python"]}
math-equivalence = {git = "https://github.com/hendrycks/math.git"}
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
